file(GLOB _DUMP_SRC_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cc")
set_property(SOURCE ${_DUMP_SRC_LIST} PROPERTY COMPILE_DEFINITIONS
    SUBMODULE_ID=mindspore::SubModuleId::SM_DEBUG)
add_library(mindspore_dump SHARED ${_DUMP_SRC_LIST})
target_link_libraries(mindspore_dump PRIVATE mindspore_core mindspore_common proto_input)
add_dependencies(mindspore_dump proto_input)
set_target_properties(mindspore_dump PROPERTIES INSTALL_RPATH $ORIGIN)
if(CMAKE_SYSTEM_NAME MATCHES "Windows")
    target_compile_definitions(mindspore_dump PRIVATE DUMP_DLL)
endif()