file(GLOB_RECURSE _EXPANDER_SRC_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.cc")
file(GLOB_RECURSE _EXPANDER_OPS_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/mindspore/ops/grad/*.cc)
list(APPEND _EXPANDER_SRC_FILES ${_EXPANDER_OPS_FILES})
set_property(SOURCE ${_EXPANDER_SRC_FILES} PROPERTY COMPILE_DEFINITIONS
  SUBMODULE_ID=mindspore::SubModuleId::SM_ANALYZER)
add_library(_mindspore_frontend_expander_obj OBJECT ${_EXPANDER_SRC_FILES})
